Removed OTP signup and added Google Signin
